# libSSD1306

./: .clang-format  .gitignore  Doxyfile  Makefile  README.md  meson.build
docs/: Doxyfile
docs/doxygen/: Doxyfile
extra/: font8x8_basic.h  rotate.c
include/: liboled.h  ssd1306.h
include/ssd1306/: err.h  font.h  platform.h  ssd1306.h
scripts/: dl_ssd1306_datasheet.sh  grep_todos.sh
src/: font.c  meson.build  platform.c  ssd1306.c
